# bouncy

./: .gitattributes  .gitignore  CMakeLists.txt  bouncy.c  bouncy.cpp
.cache/clangd/index/: bouncy.c.79E4953EAB7FB285.idx
